--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [dependency-groups]
 dev = [
-    "livekit-agents[openai,silero]>=1.3.12",
+    "livekit-agents[openai,silero,turn-detector]~=1.0",
+    "livekit-plugins-noise-cancellation~=0.2",
     "pydantic>=2.12.5",
     "pyodbc>=5.3.0",
     "python-dotenv>=1.2.1",
